--- a/projects/morya.html
+++ b/projects/morya.html
@@ -163,7 +163,7 @@
             </div>
             <!-- contact us side -->
             <div class="text-center mt-5 book-online-1">
-                <a data-toggle="modal" data-target="#exampleModal5" href="" class="btn btn-custom">Contact Us</a>
+                <a data-toggle="modal" data-target="#exampleModal5" href="" class="btn btn-custom">Enquiry Now</a>
             </div>
             <!-- Contact us side modal -->
             <div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -202,15 +202,17 @@
                     </div>
                   </div>
                 </div>
-              </div>
+            </div>
 
             <!-- OVERVIEW -->
             <div class="overview">
                 <div class="container">
-                    <h2 class="font-weight-bold text-theme">Overview</h2>
-                    <div class="line"></div>
-                    <h3 class="mt-3">Indian Soul, International Luxury with Flats in Tollygunge</h3>
-                    <p>
+                    <div class="c-flex">
+                        <h2 class="font-weight-bold text-theme">Overview</h2>
+                        <div class="line"></div>
+                        <h3 class="mt-5">Indian Soul, International Luxury with Flats in Tollygunge</h3>
+                    </div>
+                    <p class="mt-5">
                         Morya is designed to match the world’s finest luxury apartments while still remaining true to our Indian culture. Apartments
                         inspired from the land that fosters fine opulence - Morya is among the top upcoming projects of residential property in South
                         Kolkata. Life at Morya has been envisioned to be filled with Moryan moments with larger-than-life features like the Rooftop
@@ -218,24 +220,29 @@
                         plunges. The project has been thoughtfully curated to cater to every comfort that’s filled with the choicest lifestyle
                         features.
                     </p>
-                    <ul class="ml-2">
-                        <li>80% Open Space</li>
-                        <li>Vaastu Compliant Homes</li>
-                        <li>Panoramic View of Tollygunge Club Golf Course</li>
-                        <li>1036 - 1967 Sq.Ft. Built Up Unit Size</li>
-                        <li>Proposed IGBC Pre- Certified Gold Rated Development</li>
-                        <li>In-Premise Waterbody, with Lily Pond</li>
-                        <li>Luxurious Swimming Pool, Equipped with Gym & Spa</li>
-                        <li>Pleasant Walkway, Jogging Track, Outdoor Exercising Area</li>
-                        <li>Banquet Hall, Mini Theater, Cafeteria, Library</li>
-                    </ul>
+                    <div class="c2-flex">
+
+                        <ul class="ml-2">
+                            <li>80% Open Space</li>
+                            <li>Vaastu Compliant Homes</li>
+                            <li>Panoramic View of Tollygunge Club Golf Course</li>
+                            <li>1036 - 1967 Sq.Ft. Built Up Unit Size</li>
+                            <li>Proposed IGBC Pre- Certified Gold Rated Development</li>
+                            <li>In-Premise Waterbody, with Lily Pond</li>
+                            <li>Luxurious Swimming Pool, Equipped with Gym & Spa</li>
+                            <li>Pleasant Walkway, Jogging Track, Outdoor Exercising Area</li>
+                            <li>Banquet Hall, Mini Theater, Cafeteria, Library</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <!-- workthrough -->
             <div class="workthrough">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">Walkthrough</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">Walkthrough</h2>
+                        <div class="line"></div>
+                    </div>
                     <iframe
                         src="https://www.youtube.com/embed/4goVUJmBwwM"
                         title="YouTube video player"
@@ -249,8 +256,10 @@
             <!-- AMENITIES -->
             <div class="amenities">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">EXPERIENCE THE REGALITY!</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">EXPERIENCE THE REGALITY!</h2>
+                        <div class="line"></div>
+                    </div>
                     <div class="amenities-gallery mt-5">
                         <div class="row">
                             <div class="col-lg-4">
@@ -283,8 +292,10 @@
             <!-- MODEL HOME -->
             <div class="workthrough">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">MODEL HOME</h2>
-                    <div class="line mb-3"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">MODEL HOME</h2>
+                        <div class="line mb-3"></div>
+                    </div>
                     <a href="https://digitour.housing.com/projects/Sugam_Morya/3BHK">
                         <img src="../assets/images/morya/morya-virtual.jpg" alt="" width="100%" height="auto" />
                     </a>
@@ -293,8 +304,10 @@
             <!-- AMENITIES -->
             <div class="amenities">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">Amenities</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">Amenities</h2>
+                        <div class="line"></div>
+                    </div>
                     <div class="amenities-gallery mt-5">
                         <div class="row">
                             <div class="col-lg-4">
@@ -327,8 +340,10 @@
             <!-- location -->
             <div class="location">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">HOW TO REACH</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">HOW TO REACH</h2>
+                        <div class="line"></div>
+                    </div>
                     <iframe
                         src="https://www.youtube.com/embed/UiQ3LSg1r20"
                         title="YouTube video player"
@@ -342,8 +357,10 @@
             <!-- location -->
             <div class="location">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">Location</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">Location</h2>
+                        <div class="line"></div>
+                    </div>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14745.244399134699!2d88.3390871!3d22.4925081!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd35d641c017d145c!2sMorya!5e0!3m2!1sen!2sin!4v1584348504038!5m2!1sen!2sin"
                         allowfullscreen=""
@@ -707,8 +724,8 @@
                                     <option value="Morya">Morya</option>
                                     <option value="Sugam Park">Sugam Park</option>
                                     <option value="Sugam Habitat">Sugam Habitat</option>
-                                    <option value="Sugam Sudhir">Sugam Sudhir</option>
-                                    <option value="Sugam Serenity">Sugam Serenity</option>
+                                    <!-- <option value="Sugam Sudhir">Sugam Sudhir</option>
+                                    <option value="Sugam Serenity">Sugam Serenity</option> -->
                                 </select>
                             </div>
                             <div class="form-group">
