--- a/projects/sugam-business-park.html
+++ b/projects/sugam-business-park.html
@@ -165,10 +165,12 @@
             <!-- OVERVIEW -->
             <div class="overview">
                 <div class="container">
-                    <h2 class="font-weight-bold text-theme">Overview</h2>
-                    <div class="line"></div>
-                    <h3 class="mt-3">Find Your Space at Sugam Business Park!</h3>
-                    <p>
+                    <div class="c-flex">
+                        <h2 class="font-weight-bold text-theme">Overview</h2>
+                        <div class="line"></div>
+                        <h3 class="mt-5">Find Your Space at Sugam Business Park!</h3>
+                    </div>
+                    <p class="mt-5">
                         Located in the energetic Sector V, in the midst of the corporate action with the scenic view of North Kolkata wetlands is
                         Sugam Homes commercial building; Sugam Business Park. It’s the ideal workplace befitting grand ambitions.
                     </p>
@@ -190,8 +192,10 @@
             <!-- workthrough -->
             <div class="club">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">PROJECT VIEWS</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">PROJECT VIEWS</h2>
+                        <div class="line"></div>
+                    </div>
                     <div class="amenities-gallery mt-5 homes-img">
                         <div class="row">
                             <div class="col-lg-4">
@@ -216,8 +220,10 @@
             <!-- AMENITIES -->
             <div class="amenities">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">AMENITIES</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">AMENITIES</h2>
+                        <div class="line"></div>
+                    </div>
                     <div class="row">
                         <div class="col-lg-6 no-bullets">
                             <ul>
@@ -245,8 +251,10 @@
             <!-- location -->
             <div class="location">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">Location</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">Location</h2>
+                        <div class="line"></div>
+                    </div>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3684.2929268336356!2d88.433397!3d22.568145!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x71861af46a1692b9!2sSugam%20Business%20Park!5e0!3m2!1sen!2sin!4v1624620513238!5m2!1sen!2sin"
                         allowfullscreen=""
@@ -259,8 +267,10 @@
             <!-- LOCATION PROXIMITIES -->
             <div class="amenities">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">LOCATION PROXIMITIES</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">LOCATION PROXIMITIES</h2>
+                        <div class="line"></div>
+                    </div>
                     <div class="row">
                         <div class="col-lg-6">
                             <ul>
@@ -397,10 +407,57 @@
                     <hr />
                     <br />
                     <h5 class="font-weight-bold">Sugam Group</h5>
-                    <p>2/5, Sarat Bose Road, Unit No. 1F, Kolkata – 700020</p>
+                    <p class="c-flex">2/5, Sarat Bose Road, Unit No. 1F, Kolkata – 700020</p>
                     <a href="tel:8068970910">Enquiries: +91 8068970910</a> <br />
                     <a href="mailto:dipra@sugamhomes.com">dipra@sugamhomes.com</a>
                 </div>
+            </div>
+        </div>
+
+        <!-- book now btn -->
+        <div class="text-center mt-5 book-online">
+            <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">Book Online</a>
+        </div>
+        <!-- contact us side -->
+        <div class="text-center mt-5 book-online-1">
+            <a data-toggle="modal" data-target="#exampleModal7" href="" class="btn btn-custom">Enquiry Now</a>
+        </div>
+        <!-- Contact us side modal -->
+        <div class="modal fade" id="exampleModal7" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">
+                    Thank you for Enquiring About Morya
+                  </h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Name *</label>
+                      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Email address</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Mobile Number *</label>
+                      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlTextarea1">Message *</label>
+                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-custom">
+                      Submit
+                    </button>
+                  </form>
+                </div>
+              </div>
             </div>
         </div>
 
@@ -452,8 +509,8 @@
                                     <option value="Morya">Morya</option>
                                     <option value="Sugam Park">Sugam Park</option>
                                     <option value="Sugam Habitat">Sugam Habitat</option>
-                                    <option value="Sugam Sudhir">Sugam Sudhir</option>
-                                    <option value="Sugam Serenity">Sugam Serenity</option>
+                                    <!-- <option value="Sugam Sudhir">Sugam Sudhir</option>
+                                    <option value="Sugam Serenity">Sugam Serenity</option> -->
                                 </select>
                             </div>
                             <div class="form-group">
