--- a/projects/sugam-habitat.html
+++ b/projects/sugam-habitat.html
@@ -152,7 +152,7 @@
                     <img src="../assets/images/habitat/Sugam+Habitat.png" alt="" /><br />
                     <img src="../assets/images/habitat/habitat.png" alt="" />
 
-                    <h1 class="text-theme mt-3">Waves, winds and the quiet of finest luxuries.</h1>
+                    <h1 class="text-theme mt-5">Waves, winds and the quiet of finest luxuries.</h1>
                     <div class="urban_lakes_banner mt-5">
                         <img src="../assets/images/habitat/habitat-banner01.jpg" alt="banner1" />
                         <img src="../assets/images/habitat/habitat-banner02.jpg" alt="banner1" />
@@ -167,12 +167,14 @@
             <!-- OVERVIEW -->
             <div class="overview">
                 <div class="container">
-                    <h2 class="font-weight-bold text-theme">Overview</h2>
-                    <div class="line"></div>
-                    <h3 class="mt-3">Your Haven of Greenery & a Fine Lifestyle Near EM Bypass</h3>
-                    <p>Explore Homes with Private Gardens & Sky Club, off E M Bypass</p>
-                    <h4 class="font-weight-bold">Ready to move in homes and Completion Certificate Obtained</h4>
-                    <p>
+                    <div class="c-flex">
+                        <h2 class="font-weight-bold text-theme">Overview</h2>
+                        <div class="line"></div>
+                        <h3 class="mt-5">Your Haven of Greenery & a Fine Lifestyle Near EM Bypass</h3>
+                        <p class="mt-5">Explore Homes with Private Gardens & Sky Club, off E M Bypass</p>
+                        <h4 class="font-weight-bold mt-5">Ready to move in homes and Completion Certificate Obtained</h4>
+                    </div>
+                    <p class="mt-5">
                         Spread across 5.3 acres of land, over 65% open space, lush greenery, fresh air, strategic location with homes by natural
                         waterbody- Sugam Habitat awaits your presence for a lifestyle far from ordinary. An architectural spectacle with flats near EM
                         bypass, discover a world built on compact, contemporary ideas perfect for an urban lifestyle. With luxury apartments in
@@ -184,16 +186,20 @@
             <!-- Tower 7 -->
             <div class="overview">
                 <div class="container">
-                    <h2 class="font-weight-bold text-theme">Tower 7</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="font-weight-bold text-theme">Tower 7</h2>
+                        <div class="line"></div>
+                    </div>
                     <img class="mt-4" src="../assets/images/habitat/carousel2.jpg" alt="banner1" width="100%" height="auto"/>
                 </div>
             </div>
             <!-- workthrough -->
             <div class="workthrough">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">Walkthrough</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">Walkthrough</h2>
+                        <div class="line"></div>
+                    </div>
                     <iframe
                         class="mt-5"
                         src="https://www.youtube.com/embed/hXDq75HA1IA"
@@ -207,8 +213,10 @@
             <!-- club -->
             <div class="workthrough">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">Club</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">Club</h2>
+                        <div class="line"></div>
+                    </div>
                     <div class="urban_lakes_banner mt-5">
                         <img src="../assets/images/habitat/1+copy.jpg" alt="banner1" />
                         <img src="../assets/images/habitat/2+copy.jpg" alt="banner1" />
@@ -220,8 +228,10 @@
             <!-- AMENITIES -->
             <div class="amenities">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">AMENITIES</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">AMENITIES</h2>
+                        <div class="line"></div>
+                    </div>
                     <div class="amenities-gallery mt-5">
                         <div class="row">
                             <div class="col-lg-3">
@@ -293,7 +303,7 @@
                             <div class="col-lg-3"></div>
                             <div class="col-lg-3"></div>
                         </div> -->
-                        <div class="row mt-4">
+                        <div class="row mt-4 c1-flex">
                             <div class="col-lg-4">
                                 <ul class="">
                                     <li class="lifloat">Stellar Club</li>
@@ -326,8 +336,10 @@
             <!-- drone -->
             <div class="workthrough">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">EXPERIENCE THE SKY</h2>
-                    <div class="line mb-3"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">EXPERIENCE THE SKY</h2>
+                        <div class="line mb-3"></div>
+                    </div>
                     <a href="https://digitour.housing.com/drone/sugam-habitat">
                         <img src="../assets/images/habitat/sugam-habitat-drone.jpg" alt="" width="100%" height="auto" />
                     </a>
@@ -336,8 +348,10 @@
             <!-- LOCALITY VIEW -->
             <div class="workthrough">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">LOCALITY VIEW</h2>
-                    <div class="line mb-3"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">LOCALITY VIEW</h2>
+                        <div class="line mb-3"></div>
+                    </div>
                     <a href="https://digitour.housing.com/projects/sugam_homes/virtualtour-s_locality">
                         <img src="../assets/images/habitat/locality.jpg" alt="" width="100%" height="auto" />
                     </a>
@@ -356,8 +370,10 @@
             <!-- MODEL HOME -->
             <div class="workthrough">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">MODEL HOME</h2>
-                    <div class="line mb-3"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">MODEL HOME</h2>
+                        <div class="line mb-3"></div>
+                    </div>
                     <a href="https://digitour.housing.com/projects/sugam_homes/3BHK">
                         <img src="../assets/images/morya/morya-virtual.jpg" alt="" width="100%" height="auto" />
                     </a>
@@ -366,8 +382,10 @@
             <!-- CONSTRUCTION UPDATE -->
             <div class="workthrough">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">CONSTRUCTION UPDATE</h2>
-                    <div class="line mb-3"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">CONSTRUCTION UPDATE</h2>
+                        <div class="line mb-3"></div>
+                    </div>
                     <div class="urban_lakes_banner mt-5">
                         <div class="slick-card">
                             <img src="../assets/images/habitat/2.jpg" alt="banner1" class="img-responsive"  style="width: 100%;"/>
@@ -404,8 +422,10 @@
             <!-- location -->
             <div class="location">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">Location</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">Location</h2>
+                        <div class="line"></div>
+                    </div>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.374226555558!2d88.3876612149588!3d22.527650085205973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0276b0636e3741%3A0xd1474ebfac10f8e9!2sSugam%20Habitat!5e0!3m2!1sen!2sin!4v1584415881382!5m2!1sen!2sin"
                         allowfullscreen=""
@@ -616,6 +636,53 @@
             </div>
         </div>
 
+        <!-- book now btn -->
+        <div class="text-center mt-5 book-online">
+            <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">Book Online</a>
+        </div>
+        <!-- contact us side -->
+        <div class="text-center mt-5 book-online-1">
+            <a data-toggle="modal" data-target="#exampleModal8" href="" class="btn btn-custom">Enquiry Now</a>
+        </div>
+        <!-- Contact us side modal -->
+        <div class="modal fade" id="exampleModal8" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">
+                    Thank you for Enquiring About Morya
+                  </h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Name *</label>
+                      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Email address</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Mobile Number *</label>
+                      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlTextarea1">Message *</label>
+                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-custom">
+                      Submit
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </div>
+        </div>
+
         <!-- footer -->
         <footer>
             <div class="container">
@@ -664,8 +731,8 @@
                                     <option value="Morya">Morya</option>
                                     <option value="Sugam Park">Sugam Park</option>
                                     <option value="Sugam Habitat">Sugam Habitat</option>
-                                    <option value="Sugam Sudhir">Sugam Sudhir</option>
-                                    <option value="Sugam Serenity">Sugam Serenity</option>
+                                    <!-- <option value="Sugam Sudhir">Sugam Sudhir</option>
+                                    <option value="Sugam Serenity">Sugam Serenity</option> -->
                                 </select>
                             </div>
                             <div class="form-group">
