--- a/projects/sugam-park.html
+++ b/projects/sugam-park.html
@@ -160,42 +160,77 @@
             <!-- OVERVIEW -->
             <div class="overview">
                 <div class="container">
-                    <h2 class="font-weight-bold text-theme">Overview</h2>
-                    <div class="line"></div>
-                    <h3 class="mt-3">Unlock Your Home of Comfort & Convenience</h3>
-                    <p>
+                    <div class="c-flex">
+                        <h2 class="font-weight-bold text-theme">Overview</h2>
+                        <div class="line"></div>
+                        <h3 class="mt-5">Unlock Your Home of Comfort & Convenience</h3>
+                    </div>
+                    <p class="mt-5">
                         Discover the world of Sugam Park- one of the largest housing projects in Asansol with 1040 2/3BHK luxury flats in the town for
                         an elite living experience. Spread across 30 acres of land, these flats for sale in Asansol are complemented by clubhouse
                         facilities and other amenities that will foster a lifestyle of your dreams. Be it enjoying family time in our central
                         landscaped garden, playing board games with friends or simply spending some ‘me time’ in the library, Sugam Park will meet
                         your requirements within your budget.
                     </p>
-                    <h4 class="font-weight-bold">Get free Parking with every Flat. Last few units left. Hurry!</h4>
+                    <div class="c-flex mt-5">
+                        <h4 class="font-weight-bold">Get free Parking with every Flat. Last few units left. Hurry!</h4>
+                    </div>
                     <img class="mt-2" src="../assets/images/park/banner001.jpg" alt="" width="100%" height="auto" />
-                    <ul class="list mt-2 p-3">
-                        <li class="lifloat">Club house</li>
-                        <li class="lifloat">Children’s play area (outdoor &amp; indoor)</li>
-                        <li class="lifloat">Indoor games room</li>
-                        <li class="lifloat">Home theatre (air-conditioned)</li>
-                        <li class="lifloat">Multipurpose Court</li>
-                        <li class="lifloat">Central landscape garden</li>
-                        <li class="lifloat">Roof-Top Swimming pool</li>
-                        <li class="lifloat">Table tennis</li>
-                        <li class="lifloat">Gymnasium</li>
-                        <li class="lifloat">Yoga/ meditation room</li>
-                        <li class="lifloat">Jogger’s track</li>
-                        <li class="lifloat">Community hall</li>
-                        <li class="lifloat">Library</li>
-                        <li class="lifloat">Reading room</li>
-                        <li class="lifloat">Shuttle bus service</li>
-                    </ul>
+                    <div class="">
+                        <div class="row">
+                            <div class="col-lg-3"></div>
+                            <div class="col-lg-3">
+                                <ul class="list mt-2 p-3">
+                                    <li class="lifloat">Club house</li>
+                                    <li class="lifloat">Children’s play area (outdoor &amp; indoor)</li>
+                                    <li class="lifloat">Indoor games room</li>
+                                    <li class="lifloat">Home theatre (air-conditioned)</li>
+                                    <li class="lifloat">Multipurpose Court</li>
+                                    <li class="lifloat">Central landscape garden</li>
+                                    <li class="lifloat">Roof-Top Swimming pool</li>
+                                    <li class="lifloat">Table tennis</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-3">
+                                <ul class="list mt-2 p-3">
+                                    <li class="lifloat">Gymnasium</li>
+                                    <li class="lifloat">Yoga/ meditation room</li>
+                                    <li class="lifloat">Jogger’s track</li>
+                                    <li class="lifloat">Community hall</li>
+                                    <li class="lifloat">Library</li>
+                                    <li class="lifloat">Reading room</li>
+                                    <li class="lifloat">Shuttle bus service</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-3"></div>
+                        </div>
+                        <!-- <ul class="list mt-2 p-3">
+                            <li class="lifloat">Club house</li>
+                            <li class="lifloat">Children’s play area (outdoor &amp; indoor)</li>
+                            <li class="lifloat">Indoor games room</li>
+                            <li class="lifloat">Home theatre (air-conditioned)</li>
+                            <li class="lifloat">Multipurpose Court</li>
+                            <li class="lifloat">Central landscape garden</li>
+                            <li class="lifloat">Roof-Top Swimming pool</li>
+                            <li class="lifloat">Table tennis</li>
+                            <li class="lifloat">Gymnasium</li>
+                            <li class="lifloat">Yoga/ meditation room</li>
+                            <li class="lifloat">Jogger’s track</li>
+                            <li class="lifloat">Community hall</li>
+                            <li class="lifloat">Library</li>
+                            <li class="lifloat">Reading room</li>
+                            <li class="lifloat">Shuttle bus service</li>
+                        </ul> -->
+                    </div>
                 </div>
             </div>
             <!-- workthrough -->
             <div class="workthrough">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">Walkthrough</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">Walkthrough</h2>
+                        <div class="line"></div>
+                    </div>
                     <iframe
                         width="100%"
                         class="mt-5"
@@ -210,8 +245,10 @@
             <!-- club -->
             <div class="club">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">CLUB</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">CLUB</h2>
+                        <div class="line"></div>
+                    </div>
                     <div class="amenities-gallery mt-5">
                         <div class="row">
                             <div class="col-lg-4">
@@ -247,8 +284,10 @@
             <!-- AMENITIES -->
             <div class="amenities">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">INTERIORS</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">INTERIORS</h2>
+                        <div class="line"></div>
+                    </div>
                     <div class="amenities-gallery mt-5">
                         <div class="row">
                             <div class="col-lg-3">
@@ -274,16 +313,20 @@
             <!-- Construction Update -->
             <div class="workthrough">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">CONSTRUCTION UPDATE (COMPLETED)</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">CONSTRUCTION UPDATE (COMPLETED)</h2>
+                        <div class="line"></div>
+                    </div>
                     <img class="mt-5" src="../assets/images/park/sg-park-bg.jpg" alt="" width="100%" height="auto" />
                 </div>
             </div>
             <!-- location -->
             <div class="location">
                 <div class="container">
-                    <h2 class="text-theme font-weight-bold">Location</h2>
-                    <div class="line"></div>
+                    <div class="c-flex">
+                        <h2 class="text-theme font-weight-bold">Location</h2>
+                        <div class="line"></div>
+                    </div>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1870467.107063348!2d86.977331!3d23.702548!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5a455b22161eac07!2sSugam%20Park%20-%20Flats%20near%20Asansol%20Railway%20Station!5e0!3m2!1sen!2sin!4v1624606189854!5m2!1sen!2sin"
                         allowfullscreen=""
@@ -485,6 +528,53 @@
             </div>
         </div>
 
+        <!-- book now btn -->
+        <div class="text-center mt-5 book-online">
+            <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">Book Online</a>
+        </div>
+        <!-- contact us side -->
+        <div class="text-center mt-5 book-online-1">
+            <a data-toggle="modal" data-target="#exampleModal9" href="" class="btn btn-custom">Enquiry Now</a>
+        </div>
+        <!-- Contact us side modal -->
+        <div class="modal fade" id="exampleModal9" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">
+                    Thank you for Enquiring About Morya
+                  </h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Name *</label>
+                      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Email address</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Mobile Number *</label>
+                      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                    </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlTextarea1">Message *</label>
+                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-custom">
+                      Submit
+                    </button>
+                  </form>
+                </div>
+              </div>
+            </div>
+        </div>
+
         <!-- footer -->
         <footer>
             <div class="container">
@@ -533,8 +623,8 @@
                                     <option value="Morya">Morya</option>
                                     <option value="Sugam Park">Sugam Park</option>
                                     <option value="Sugam Habitat">Sugam Habitat</option>
-                                    <option value="Sugam Sudhir">Sugam Sudhir</option>
-                                    <option value="Sugam Serenity">Sugam Serenity</option>
+                                    <!-- <option value="Sugam Sudhir">Sugam Sudhir</option>
+                                    <option value="Sugam Serenity">Sugam Serenity</option> -->
                                 </select>
                             </div>
                             <div class="form-group">
