--- a/projects/prakriti.html
+++ b/projects/prakriti.html
@@ -119,7 +119,7 @@
       <div class="container text-center">
         <img src="../assets/images/prakriti/prakriti1.jpg" alt="" />
         <h2 class="text-theme mt-5">Tribute to the Evergreen Nature!</h2>
-        <div class="container text-center">
+        <div class="container text-center mt-5">
           <p>
             Sugam Prakriti promises a home free from pollution of any kind. A healthy lifestyle awaits you here. Breathe
             in fresh air, Walk around natural water body. Reveal in the warm rays of Sun. With 3 Tall towers, Sugam
@@ -138,10 +138,12 @@
     <!-- OVERVIEW -->
     <div class="overview">
       <div class="container">
-        <h2 class="font-weight-bold text-theme">Overview</h2>
-        <div class="line"></div>
-        <h3 class="mt-3">Affordable Living Off Kamagazi</h3>
-        <p>
+        <div class="c-flex">
+          <h2 class="font-weight-bold text-theme">Overview</h2>
+          <div class="line"></div>
+          <h3 class="mt-5">Affordable Living Off Kamagazi</h3>
+        </div>
+        <p class="mt-5">
           Nature is an eloquent poetry that touches every heart and cleanses your soul. It is the most beautiful and
           attractive surrounding that gives us immense joy, happiness to live healthy. Sugam Prakriti offers you what
           exactly you need- a modern-day life. </p>
@@ -175,8 +177,10 @@
     <!-- workthrough -->
     <div class="workthrough">
       <div class="container">
-        <h2 class="text-theme font-weight-bold">Walkthrough</h2>
-        <div class="line"></div>
+        <div class="c-flex">
+          <h2 class="text-theme font-weight-bold">Walkthrough</h2>
+          <div class="line"></div>
+        </div>
         <iframe width="100%" class="mt-5" src="https://www.youtube.com/" title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
@@ -185,8 +189,10 @@
     <!-- AMENITIES -->
     <div class="amenities">
       <div class="container">
-        <h2 class="text-theme font-weight-bold">Amenities</h2>
-        <div class="line"></div>
+        <div class="c-flex">
+          <h2 class="text-theme font-weight-bold">Amenities</h2>
+          <div class="line"></div>
+        </div>
         <div class="amenities-gallery mt-5">
           <div class="row">
             <div class="col-lg-4">
@@ -229,8 +235,10 @@
     <!-- Construction Update -->
     <div class="workthrough">
       <div class="container">
-        <h2 class="text-theme font-weight-bold">CONSTRUCTION UPDATE</h2>
-        <div class="line"></div>
+        <div class="c-flex">
+          <h2 class="text-theme font-weight-bold">CONSTRUCTION UPDATE</h2>
+          <div class="line"></div>
+        </div>
 <!--         <img class="mt-5" src="../assets/images/park/sg-park-bg.jpg" alt="" width="100%" height="auto" /> -->
         <div class="urban_lakes_banner mt-5">
           <img src="../assets/images/prakriti/cu1.png" alt="banner1" />
@@ -241,17 +249,21 @@
     <!-- location -->
     <div class="location">
       <div class="container">
-        <h2 class="text-theme font-weight-bold">Location</h2>
-        <div class="line"></div>
-        <p class="mt-3">
-          Site Address : Premises No. 1479, Kusumba, Kolkata-700103
-        </p>
+        <div class="c-flex">
+          <h2 class="text-theme font-weight-bold">Location</h2>
+          <div class="line"></div>
+          <p class="mt-3">
+            Site Address : Premises No. 1479, Kusumba, Kolkata-700103
+          </p>
+        </div>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3687.479299191551!2d88.40308911427135!3d22.448616043169018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb6094aa7ae8e280!2zMjLCsDI2JzU1LjAiTiA4OMKwMjQnMTkuMCJF!5e0!3m2!1sen!2sin!4v1638961353149!5m2!1sen!2sin"
           allowfullscreen="" loading="lazy"></iframe>
 
-        <h2 class="text-theme font-weight-bold mt-5">LOCATION PROXIMITIES</h2>
-        <div class="line"></div>
+        <div class="c-flex">
+          <h2 class="text-theme font-weight-bold mt-5">LOCATION PROXIMITIES</h2>
+          <div class="line"></div>
+        </div>
         <div class="row mt-3">
           <div class="col-lg-6">
             <ul>
@@ -451,9 +463,10 @@
     <!-- ---------------pricing--------------------- -->
     <div class="price">
       <div class="container">
-
-        <h2 class="text-theme font-weight-bold mt-5">Pricing</h2>
-        <div class="line"></div>
+        <div class="c-flex">
+          <h2 class="text-theme font-weight-bold mt-5">Pricing</h2>
+          <div class="line"></div>
+        </div>
         <div class="row mt-3 ml-0">
           <p>Simple Pricing For Your Sweet Home. Sugam Prakriti promises a home free from pollution of any kind. A
             healthy lifestyle awaits you here.</p>
@@ -533,8 +546,8 @@
                 <option value="Morya">Morya</option>
                 <option value="Sugam Park">Sugam Park</option>
                 <option value="Sugam Habitat">Sugam Habitat</option>
-                <option value="Sugam Sudhir">Sugam Sudhir</option>
-                <option value="Sugam Serenity">Sugam Serenity</option>
+                <!-- <option value="Sugam Sudhir">Sugam Sudhir</option>
+                <option value="Sugam Serenity">Sugam Serenity</option> -->
               </select>
             </div>
             <div class="form-group">
