--- a/projects/sugam-serenity.html
+++ b/projects/sugam-serenity.html
@@ -651,6 +651,53 @@
       </div>
     </div>
 
+    <!-- book now btn -->
+    <div class="text-center mt-5 book-online">
+      <a href="https://secure.morya.info/users/sign_in" class="btn btn-custom">Book Online</a>
+  </div>
+  <!-- contact us side -->
+  <div class="text-center mt-5 book-online-1">
+      <a data-toggle="modal" data-target="#exampleModal10" href="" class="btn btn-custom">Enquiry Now</a>
+  </div>
+  <!-- Contact us side modal -->
+  <div class="modal fade" id="exampleModal10" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">
+              Thank you for Enquiring About Morya
+            </h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Name *</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Mobile Number *</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlTextarea1">Message *</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+              <button type="submit" class="btn btn-custom">
+                Submit
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+  </div>
+
     <!-- footer -->
     <footer>
       <div class="container">
@@ -703,8 +750,8 @@
                   <option value="Morya">Morya</option>
                   <option value="Sugam Park">Sugam Park</option>
                   <option value="Sugam Habitat">Sugam Habitat</option>
-                  <option value="Sugam Sudhir">Sugam Sudhir</option>
-                  <option value="Sugam Serenity">Sugam Serenity</option>
+                  <!-- <option value="Sugam Sudhir">Sugam Sudhir</option>
+                  <option value="Sugam Serenity">Sugam Serenity</option> -->
                 </select>
               </div>
               <div class="form-group">
